--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,6 @@
                     <includes>
                         <include>**/*Runner.java</include>
                     </includes>
-                     <systemPropertyVariables>
-				        <extent.reporter.spark.start>true</extent.reporter.spark.start>
-				        <extent.reporter.spark.out>target/test-output/SparkReport/Spark.html</extent.reporter.spark.out>
-				    </systemPropertyVariables>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
@@ -197,11 +193,6 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-        <dependency>
-                     <groupId>tech.grasshopper</groupId>
-                     <artifactId>extentreports-cucumber6-adapter</artifactId>
-                     <version>2.8.4</version>
-              </dependency>
               <dependency>
 		    <groupId>com.fasterxml.uuid</groupId>
 		    <artifactId>java-uuid-generator</artifactId>
@@ -316,16 +307,26 @@
         <artifactId>junit-jupiter-engine</artifactId>
         <version>5.3.2</version>
     </dependency>
-    <dependency>
-		<groupId>com.aventstack</groupId>
-		<artifactId>extentreports</artifactId>
-		<version>5.0.9</version>
-	</dependency>
-	<dependency>
-   <groupId>tech.grasshopper</groupId>
-   <artifactId>extentreports-cucumber5-adapter</artifactId>
-   <version>2.8.4</version>
+  <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber6-adapter -->
+<dependency>
+    <groupId>tech.grasshopper</groupId>
+    <artifactId>extentreports-cucumber6-adapter</artifactId>
+    <version>2.8.4</version>
+    <exclusions>
+    	<exclusion>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>klov-reporter</artifactId>
+    	</exclusion>
+
+    	<exclusion>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>extentreports</artifactId>
+    	</exclusion>
+    </exclusions>
+    
 </dependency>
+  
+
 
 		  
 		
