--- a/pom.xml
+++ b/pom.xml
@@ -318,14 +318,16 @@
     		<artifactId>klov-reporter</artifactId>
     	</exclusion>
 
-    	<exclusion>
-    		<groupId>com.aventstack</groupId>
-    		<artifactId>extentreports</artifactId>
-    	</exclusion>
     </exclusions>
     
 </dependency>
   
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.1</version>
+</dependency>
 
 
 		  
