--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -7,7 +7,8 @@ extent.reporter.spark.start=true
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 #extent.reporter.pdf.config=src/test/resources/pdf-config.xml
 
-extent.reporter.spark.out=target/test-output/ExtentReport.html
+extent.reporter.spark.out=test-output/ExtentReport.html
+
 #extent.reporter.json.out=target/test-output/Json/ExtentJson.json
 #extent.reporter.rerunspark.out=target/test-output/RerunSpark
 
@@ -17,7 +18,7 @@ extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,
 #embed image as base64 string src default is false
 #extent.reporter.spark.base64imagesrc=true
 
-screenshot.dir=target/
+screenshot.dir=test-output/
 screenshot.rel.path=../
 
 systeminfo.os=Windows
