--- a/src/test/resources/Config/Config.properties
+++ b/src/test/resources/Config/Config.properties
@@ -9,6 +9,11 @@
 #WeTable:https://www.dezlearn.com/webtable-example/
 #Barcode:https://barcode.tec-it.com/en
 #Otp:https://www.amazon.in/
+
+
+#Execution:UI/API
+Execution:UI
+Environment:System
 Browser:Chrome
 URL:https://emicalculator.net/
 ChromeDriverPath:C:\\Users\\Dell\\eclipse-workspace\\Com.Test\\src\\test\\resources\\Driver\\chromedriver.exe
@@ -16,7 +21,7 @@ ExcelFilePath:src\\test\\resources\\TestDataSheet
 ExcelCSVPath:src\\test\\resources\\TestdataCSV
 PdfUrl:http://www.pdf995.com/samples/pdf.pdf
 ImageText:https://1.bp.blogspot.com/-v-SRFEpyg0A/XLl_nSap-xI/AAAAAAAArVY/pet-BSGcu0EZJWkHycLGh5a8rKl3dZNuwCLcBGAs/s1600/img2.JPG
-Environment:System
+
 #Chromeoptions:incognito,headless,disableImage
 #If it is not Required then set 'NO' in ChromeOtions
 Chromeoptions:No
