--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,13 +1,15 @@
 
 extent.reporter.spark.start=true
+extent.reporter.spark.out=test-output/SparkReport/Spark.html
+extent.reporter.spark.config=src/test/resources/extent-config.xml
 #extent.reporter.json.start=true
 
 
 #extent.reporter.klov.config=src/test/resources/klov.properties
-extent.reporter.spark.config=src/test/resources/extent-config.xml
+
 #extent.reporter.pdf.config=src/test/resources/pdf-config.xml
 
-extent.reporter.spark.out=test-output/ExtentReport.html
+extent.reporter.spark.out=test-output/SparkReport/
 
 #extent.reporter.json.out=target/test-output/Json/ExtentJson.json
 #extent.reporter.rerunspark.out=target/test-output/RerunSpark
