--- a/src/test/resources/Config/Config.properties
+++ b/src/test/resources/Config/Config.properties
@@ -22,12 +22,15 @@ ExcelCSVPath:src\\test\\resources\\TestdataCSV
 PdfUrl:http://www.pdf995.com/samples/pdf.pdf
 ImageText:https://1.bp.blogspot.com/-v-SRFEpyg0A/XLl_nSap-xI/AAAAAAAArVY/pet-BSGcu0EZJWkHycLGh5a8rKl3dZNuwCLcBGAs/s1600/img2.JPG
 
-#Chromeoptions:incognito,headless,disableImage
+#Chromeoptions:incognito,headless,disableImage,disablePopup
 #If it is not Required then set 'NO' in ChromeOtions
-Chromeoptions:No
+Chromeoptions:disablePopup
 #AcessbilityTesting:Yes/No
 AcessbilityTesting:Yes
 ###############################################TestrailConfig##########################
 TestRailUpdate=true
 TestRailUrl=https://testingdemopractice.testrail.io/
 TestRail_AUTHKEY=RdRJv/N/jkXNP506Rf6s-Dc/dfeLgWwtulr19jeAI
+
+#############################################API Config ############################################
+System_API_URL:https://gorest.co.in
